--- a/SRC/branch/HOL_CSharp/HOL_CSharp/HOL_CSharp/HOL_CSharp.vcxproj.filters
+++ b/SRC/branch/HOL_CSharp/HOL_CSharp/HOL_CSharp/HOL_CSharp.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="LoginDlg.h">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="Legend.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="LegendsView.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
@@ -46,7 +52,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="LoginDlg.cpp">
+    <ClCompile Include="Legend.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -57,6 +63,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SystemWindow.resx">
+      <Filter>资源文件</Filter>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginDlg.resx">
       <Filter>资源文件</Filter>
     </EmbeddedResource>
   </ItemGroup>
